--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -59,10 +59,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "3382c1a7-3ea3-4401-9e43-7cc8a38bac1a",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-30T07:37:23.421974Z",
+     "start_time": "2025-09-30T07:37:23.414509Z"
+    }
+   },
    "source": [
     "# This is the first code cell of the notebook,\n",
     "# so all imports should go here.\n",
@@ -72,7 +75,9 @@
     "import types\n",
     "\n",
     "import autograder.question"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -86,20 +91,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "3e543a4b-2655-4da9-a4f8-b57269d8d2ea",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-30T07:36:55.987818Z",
+     "start_time": "2025-09-30T07:36:55.984214Z"
+    }
+   },
    "source": [
     "def my_function():\n",
     "    \"\"\"\n",
     "    The output of this function will be tested (it must return True).\n",
     "    \"\"\"\n",
-    "\n",
-    "    return NotImplemented\n",
+    "    return True\n",
     "\n",
     "my_function()"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -134,14 +154,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "5e535ac9-fe21-447d-bf47-01e49ab90e27",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-30T07:42:30.267033Z",
+     "start_time": "2025-09-30T07:42:30.264236Z"
+    }
+   },
    "source": [
     "def my_rounding_function(x):\n",
     "    return int(x + 0.5)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -178,16 +203,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "1233707f-5793-4fc4-a18b-cf2087fbba49",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-30T07:45:06.953827Z",
+     "start_time": "2025-09-30T07:45:06.950826Z"
+    }
+   },
    "source": [
     "a = 1\n",
     "b = 1\n",
     "\n",
     "assert a == b"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -201,16 +231,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "cc656d24-3bb9-4859-b528-dc75643afcb8",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-30T07:45:26.618010Z",
+     "start_time": "2025-09-30T07:45:26.499087Z"
+    }
+   },
    "source": [
     "a = 1\n",
     "b = 2\n",
     "\n",
     "assert a == b"
-   ]
+   ],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mAssertionError\u001B[39m                            Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[7]\u001B[39m\u001B[32m, line 4\u001B[39m\n\u001B[32m      1\u001B[39m a = \u001B[32m1\u001B[39m\n\u001B[32m      2\u001B[39m b = \u001B[32m2\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m4\u001B[39m \u001B[38;5;28;01massert\u001B[39;00m a == b\n",
+      "\u001B[31mAssertionError\u001B[39m: "
+     ]
+    }
+   ],
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -222,16 +269,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "cf031537-2025-4ec2-b730-9977fd0f2e5b",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-30T07:45:46.314017Z",
+     "start_time": "2025-09-30T07:45:46.301738Z"
+    }
+   },
    "source": [
     "a = 1\n",
     "b = 2\n",
     "\n",
     "assert a == b, 'One does not equal two!'"
-   ]
+   ],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "One does not equal two!",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mAssertionError\u001B[39m                            Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[8]\u001B[39m\u001B[32m, line 4\u001B[39m\n\u001B[32m      1\u001B[39m a = \u001B[32m1\u001B[39m\n\u001B[32m      2\u001B[39m b = \u001B[32m2\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m4\u001B[39m \u001B[38;5;28;01massert\u001B[39;00m a == b, \u001B[33m'\u001B[39m\u001B[33mOne does not equal two!\u001B[39m\u001B[33m'\u001B[39m\n",
+      "\u001B[31mAssertionError\u001B[39m: One does not equal two!"
+     ]
+    }
+   ],
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -243,10 +307,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "458c4dbf-a9fa-4d97-b339-faf1d519d7b7",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-30T07:54:20.903656Z",
+     "start_time": "2025-09-30T07:54:20.866383Z"
+    }
+   },
    "source": [
     "def test_my_rounding_function():\n",
     "    # Test cases that we manually came up with organized in (input, expected output) pairs.\n",
@@ -269,7 +336,22 @@
     "\n",
     "# Run our new testing function.\n",
     "test_my_rounding_function()"
-   ]
+   ],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "Input: -0.750000, Expected Output: -1, Actual Output: 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mAssertionError\u001B[39m                            Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[9]\u001B[39m\u001B[32m, line 21\u001B[39m\n\u001B[32m     18\u001B[39m         \u001B[38;5;28;01massert\u001B[39;00m actual_output == expected_output, message\n\u001B[32m     20\u001B[39m \u001B[38;5;66;03m# Run our new testing function.\u001B[39;00m\n\u001B[32m---> \u001B[39m\u001B[32m21\u001B[39m \u001B[43mtest_my_rounding_function\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[9]\u001B[39m\u001B[32m, line 18\u001B[39m, in \u001B[36mtest_my_rounding_function\u001B[39m\u001B[34m()\u001B[39m\n\u001B[32m     14\u001B[39m actual_output = my_rounding_function(input_value)\n\u001B[32m     16\u001B[39m message = \u001B[33m\"\u001B[39m\u001B[33mInput: \u001B[39m\u001B[38;5;132;01m%f\u001B[39;00m\u001B[33m, Expected Output: \u001B[39m\u001B[38;5;132;01m%d\u001B[39;00m\u001B[33m, Actual Output: \u001B[39m\u001B[38;5;132;01m%d\u001B[39;00m\u001B[33m\"\u001B[39m % (\n\u001B[32m     17\u001B[39m     input_value, expected_output, actual_output)\n\u001B[32m---> \u001B[39m\u001B[32m18\u001B[39m \u001B[38;5;28;01massert\u001B[39;00m actual_output == expected_output, message\n",
+      "\u001B[31mAssertionError\u001B[39m: Input: -0.750000, Expected Output: -1, Actual Output: 0"
+     ]
+    }
+   ],
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
@@ -295,10 +377,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "8e05b701-8dc2-4d63-9cb8-1b7ebf85f69e",
    "metadata": {},
-   "outputs": [],
    "source": [
     "def test_my_function_value(value):\n",
     "    # The pass statement in Python just says that there is nothing here (it is a no-op).\n",
@@ -307,7 +387,9 @@
     "\n",
     "# Run your new testing function with the result from my_function().\n",
     "test_my_function_value(my_function())"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -320,13 +402,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "5884bba7-35a2-4dea-8449-1057f58605e1",
    "metadata": {},
-   "outputs": [],
    "source": [
     "test_my_function_value(-1)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -353,10 +435,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "918d33c1-064f-48ce-a45e-22dd68c3e7a0",
    "metadata": {},
-   "outputs": [],
    "source": [
     "class TestMyRoundingFunction(autograder.question.Question):\n",
     "    def score_question(self, submission):\n",
@@ -403,7 +483,9 @@
     "\n",
     "# Output the results.\n",
     "print(result.scoring_report())"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -441,10 +523,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "2021314f-468d-49f1-8f97-6b91a7a508a4",
    "metadata": {},
-   "outputs": [],
    "source": [
     "class TestMyFunction(autograder.question.Question):\n",
     "    def score_question(self, submission):\n",
@@ -477,7 +557,9 @@
     "\n",
     "# Output the results.\n",
     "print(result.scoring_report())"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
