--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -94,8 +94,8 @@
    "id": "3e543a4b-2655-4da9-a4f8-b57269d8d2ea",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-30T07:36:55.987818Z",
-     "start_time": "2025-09-30T07:36:55.984214Z"
+     "end_time": "2025-10-03T22:36:35.092087Z",
+     "start_time": "2025-10-03T22:36:35.087437Z"
     }
    },
    "source": [
@@ -114,12 +114,12 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -157,8 +157,8 @@
    "id": "5e535ac9-fe21-447d-bf47-01e49ab90e27",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-30T07:42:30.267033Z",
-     "start_time": "2025-09-30T07:42:30.264236Z"
+     "end_time": "2025-10-03T22:32:37.550868Z",
+     "start_time": "2025-10-03T22:32:37.548184Z"
     }
    },
    "source": [
@@ -166,7 +166,7 @@
     "    return int(x + 0.5)"
    ],
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -310,8 +310,8 @@
    "id": "458c4dbf-a9fa-4d97-b339-faf1d519d7b7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-30T07:54:20.903656Z",
-     "start_time": "2025-09-30T07:54:20.866383Z"
+     "end_time": "2025-10-03T22:32:49.399122Z",
+     "start_time": "2025-10-03T22:32:49.363121Z"
     }
    },
    "source": [
@@ -345,13 +345,13 @@
      "traceback": [
       "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
       "\u001B[31mAssertionError\u001B[39m                            Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[9]\u001B[39m\u001B[32m, line 21\u001B[39m\n\u001B[32m     18\u001B[39m         \u001B[38;5;28;01massert\u001B[39;00m actual_output == expected_output, message\n\u001B[32m     20\u001B[39m \u001B[38;5;66;03m# Run our new testing function.\u001B[39;00m\n\u001B[32m---> \u001B[39m\u001B[32m21\u001B[39m \u001B[43mtest_my_rounding_function\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[9]\u001B[39m\u001B[32m, line 18\u001B[39m, in \u001B[36mtest_my_rounding_function\u001B[39m\u001B[34m()\u001B[39m\n\u001B[32m     14\u001B[39m actual_output = my_rounding_function(input_value)\n\u001B[32m     16\u001B[39m message = \u001B[33m\"\u001B[39m\u001B[33mInput: \u001B[39m\u001B[38;5;132;01m%f\u001B[39;00m\u001B[33m, Expected Output: \u001B[39m\u001B[38;5;132;01m%d\u001B[39;00m\u001B[33m, Actual Output: \u001B[39m\u001B[38;5;132;01m%d\u001B[39;00m\u001B[33m\"\u001B[39m % (\n\u001B[32m     17\u001B[39m     input_value, expected_output, actual_output)\n\u001B[32m---> \u001B[39m\u001B[32m18\u001B[39m \u001B[38;5;28;01massert\u001B[39;00m actual_output == expected_output, message\n",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[4]\u001B[39m\u001B[32m, line 21\u001B[39m\n\u001B[32m     18\u001B[39m         \u001B[38;5;28;01massert\u001B[39;00m actual_output == expected_output, message\n\u001B[32m     20\u001B[39m \u001B[38;5;66;03m# Run our new testing function.\u001B[39;00m\n\u001B[32m---> \u001B[39m\u001B[32m21\u001B[39m \u001B[43mtest_my_rounding_function\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[4]\u001B[39m\u001B[32m, line 18\u001B[39m, in \u001B[36mtest_my_rounding_function\u001B[39m\u001B[34m()\u001B[39m\n\u001B[32m     14\u001B[39m actual_output = my_rounding_function(input_value)\n\u001B[32m     16\u001B[39m message = \u001B[33m\"\u001B[39m\u001B[33mInput: \u001B[39m\u001B[38;5;132;01m%f\u001B[39;00m\u001B[33m, Expected Output: \u001B[39m\u001B[38;5;132;01m%d\u001B[39;00m\u001B[33m, Actual Output: \u001B[39m\u001B[38;5;132;01m%d\u001B[39;00m\u001B[33m\"\u001B[39m % (\n\u001B[32m     17\u001B[39m     input_value, expected_output, actual_output)\n\u001B[32m---> \u001B[39m\u001B[32m18\u001B[39m \u001B[38;5;28;01massert\u001B[39;00m actual_output == expected_output, message\n",
       "\u001B[31mAssertionError\u001B[39m: Input: -0.750000, Expected Output: -1, Actual Output: 0"
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -378,18 +378,24 @@
   {
    "cell_type": "code",
    "id": "8e05b701-8dc2-4d63-9cb8-1b7ebf85f69e",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-03T22:37:34.288473Z",
+     "start_time": "2025-10-03T22:37:34.285963Z"
+    }
+   },
    "source": [
     "def test_my_function_value(value):\n",
     "    # The pass statement in Python just says that there is nothing here (it is a no-op).\n",
     "    # Replace it with your actual code.\n",
-    "    pass\n",
+    "    std_output = my_function()\n",
+    "    assert std_output == value, 'Value is not equal to my_function return val'\n",
     "\n",
     "# Run your new testing function with the result from my_function().\n",
     "test_my_function_value(my_function())"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
