--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -62,8 +62,8 @@
    "id": "3382c1a7-3ea3-4401-9e43-7cc8a38bac1a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-03T23:49:29.547726Z",
-     "start_time": "2025-10-03T23:49:29.539724Z"
+     "end_time": "2025-10-04T05:02:05.482504Z",
+     "start_time": "2025-10-04T05:02:05.464370Z"
     }
    },
    "source": [
@@ -77,7 +77,7 @@
     "import autograder.question"
    ],
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -94,8 +94,8 @@
    "id": "3e543a4b-2655-4da9-a4f8-b57269d8d2ea",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-03T23:49:26.063665Z",
-     "start_time": "2025-10-03T23:49:26.050784Z"
+     "end_time": "2025-10-04T05:02:07.795231Z",
+     "start_time": "2025-10-04T05:02:07.791686Z"
     }
    },
    "source": [
@@ -114,12 +114,12 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 7
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -157,8 +157,8 @@
    "id": "5e535ac9-fe21-447d-bf47-01e49ab90e27",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-03T23:49:17.913511Z",
-     "start_time": "2025-10-03T23:49:17.905565Z"
+     "end_time": "2025-10-04T05:02:10.994862Z",
+     "start_time": "2025-10-04T05:02:10.992167Z"
     }
    },
    "source": [
@@ -166,7 +166,7 @@
     "    return int(x + 0.5)"
    ],
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -310,8 +310,8 @@
    "id": "458c4dbf-a9fa-4d97-b339-faf1d519d7b7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-03T23:49:39.110362Z",
-     "start_time": "2025-10-03T23:49:39.015381Z"
+     "end_time": "2025-10-04T05:02:24.618183Z",
+     "start_time": "2025-10-04T05:02:24.596698Z"
     }
    },
    "source": [
@@ -345,13 +345,13 @@
      "traceback": [
       "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
       "\u001B[31mAssertionError\u001B[39m                            Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[9]\u001B[39m\u001B[32m, line 21\u001B[39m\n\u001B[32m     18\u001B[39m         \u001B[38;5;28;01massert\u001B[39;00m actual_output == expected_output, message\n\u001B[32m     20\u001B[39m \u001B[38;5;66;03m# Run our new testing function.\u001B[39;00m\n\u001B[32m---> \u001B[39m\u001B[32m21\u001B[39m \u001B[43mtest_my_rounding_function\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[9]\u001B[39m\u001B[32m, line 18\u001B[39m, in \u001B[36mtest_my_rounding_function\u001B[39m\u001B[34m()\u001B[39m\n\u001B[32m     14\u001B[39m actual_output = my_rounding_function(input_value)\n\u001B[32m     16\u001B[39m message = \u001B[33m\"\u001B[39m\u001B[33mInput: \u001B[39m\u001B[38;5;132;01m%f\u001B[39;00m\u001B[33m, Expected Output: \u001B[39m\u001B[38;5;132;01m%d\u001B[39;00m\u001B[33m, Actual Output: \u001B[39m\u001B[38;5;132;01m%d\u001B[39;00m\u001B[33m\"\u001B[39m % (\n\u001B[32m     17\u001B[39m     input_value, expected_output, actual_output)\n\u001B[32m---> \u001B[39m\u001B[32m18\u001B[39m \u001B[38;5;28;01massert\u001B[39;00m actual_output == expected_output, message\n",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[5]\u001B[39m\u001B[32m, line 21\u001B[39m\n\u001B[32m     18\u001B[39m         \u001B[38;5;28;01massert\u001B[39;00m actual_output == expected_output, message\n\u001B[32m     20\u001B[39m \u001B[38;5;66;03m# Run our new testing function.\u001B[39;00m\n\u001B[32m---> \u001B[39m\u001B[32m21\u001B[39m \u001B[43mtest_my_rounding_function\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[5]\u001B[39m\u001B[32m, line 18\u001B[39m, in \u001B[36mtest_my_rounding_function\u001B[39m\u001B[34m()\u001B[39m\n\u001B[32m     14\u001B[39m actual_output = my_rounding_function(input_value)\n\u001B[32m     16\u001B[39m message = \u001B[33m\"\u001B[39m\u001B[33mInput: \u001B[39m\u001B[38;5;132;01m%f\u001B[39;00m\u001B[33m, Expected Output: \u001B[39m\u001B[38;5;132;01m%d\u001B[39;00m\u001B[33m, Actual Output: \u001B[39m\u001B[38;5;132;01m%d\u001B[39;00m\u001B[33m\"\u001B[39m % (\n\u001B[32m     17\u001B[39m     input_value, expected_output, actual_output)\n\u001B[32m---> \u001B[39m\u001B[32m18\u001B[39m \u001B[38;5;28;01massert\u001B[39;00m actual_output == expected_output, message\n",
       "\u001B[31mAssertionError\u001B[39m: Input: -0.750000, Expected Output: -1, Actual Output: 0"
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -380,22 +380,20 @@
    "id": "8e05b701-8dc2-4d63-9cb8-1b7ebf85f69e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-03T23:27:05.260166Z",
-     "start_time": "2025-10-03T23:27:05.253472Z"
+     "end_time": "2025-10-04T06:49:27.318500Z",
+     "start_time": "2025-10-04T06:49:27.315136Z"
     }
    },
    "source": [
     "def test_my_function_value(value):\n",
-    "    # The pass statement in Python just says that there is nothing here (it is a no-op).\n",
-    "    # Replace it with your actual code.\n",
     "    std_output = my_function()\n",
-    "    assert std_output == value, 'Value is not equal to my_function return val'\n",
+    "    assert std_output is value, 'Value is not equal to my_function return val'\n",
     "\n",
     "# Run your new testing function with the result from my_function().\n",
     "test_my_function_value(my_function())"
    ],
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 19
   },
   {
    "cell_type": "markdown",
@@ -546,32 +544,36 @@
    "id": "2021314f-468d-49f1-8f97-6b91a7a508a4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-03T23:50:31.770627Z",
-     "start_time": "2025-10-03T23:50:31.733593Z"
+     "end_time": "2025-10-04T06:24:48.013105Z",
+     "start_time": "2025-10-04T06:24:48.009171Z"
     }
    },
    "source": [
     "class TestMyFunction(autograder.question.Question):\n",
     "    def score_question(self, submission):\n",
     "        # We cal call your code using the submission object.\n",
-    "        result = submission.my_function()\n",
+    "        inresult = submission.my_function()\n",
     "        \n",
     "        # Does the function return NotImplemented?\n",
-    "        if (self.check_not_implemented(result)):\n",
+    "        if self.check_not_implemented(inresult):\n",
     "            self.fail(\"Function is not implemented\")\n",
     "            return\n",
     "\n",
     "        # Does the function return a boolean?\n",
-    "        if (not isinstance(result, bool)):\n",
+    "        if not isinstance(inresult, bool):\n",
     "            self.fail(\"Function must return a boolean value.\")\n",
     "            return\n",
     "\n",
     "        # Add your code here.\n",
-    "        \n",
-    "        self.full_credit()\n",
+    "        if inresult:\n",
+    "            self.full_credit()\n",
+    "            return\n",
+    "        self.fail(\"My Function did not return true\")\n",
+    "        return\n",
+    "\n",
     "\n",
     "# Construct the question with a number of max points and a name (neither matter in this case).\n",
-    "question = TestMyFunction()\n",
+    "question = TestMyFunction(100, \"Testing my_function()\")\n",
     "\n",
     "# Prepare the submission object.\n",
     "# Normally this is more complex,\n",
@@ -579,25 +581,21 @@
     "submission = types.SimpleNamespace(my_function = my_function)\n",
     "\n",
     "# Run the testing/scoring code.\n",
-    "result = question.score_question(submission)\n",
+    "result = question.grade(submission)\n",
     "\n",
     "# Output the results.\n",
     "print(result.scoring_report())"
    ],
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'scoring_report'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
-      "\u001B[31mAttributeError\u001B[39m                            Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[11]\u001B[39m\u001B[32m, line 31\u001B[39m\n\u001B[32m     28\u001B[39m result = question.score_question(submission)\n\u001B[32m     30\u001B[39m \u001B[38;5;66;03m# Output the results.\u001B[39;00m\n\u001B[32m---> \u001B[39m\u001B[32m31\u001B[39m \u001B[38;5;28mprint\u001B[39m(\u001B[43mresult\u001B[49m\u001B[43m.\u001B[49m\u001B[43mscoring_report\u001B[49m())\n",
-      "\u001B[31mAttributeError\u001B[39m: 'NoneType' object has no attribute 'scoring_report'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing my_function(): 100 / 100\n"
      ]
     }
    ],
-   "execution_count": 11
+   "execution_count": 18
   },
   {
    "cell_type": "markdown",
